[24.November 2008]
- sophisticatedspritestate.rb: RD->RDoc
- location.rb: Location#find_surface
- viking.rb: New descending mechanism (using Location#find_surface);
  error "1px under viking fixed not considered error any more;
  fixed by making collision rect 1px lower"
- monsters/cottage.rb: made semi-solid (first semi-solid object in the game)
- shielder.rb, shield.rb: Shield changed from Sprite to semi-solid
  StaticObject; works better now (vikings don't fall through it)
- sprinter.rb Sprinter#space_func_on: fixed error "Erik can't jump from shield"
  and caused two new errors
- RubyCampaign/Intro: start moved 10px up

[23.November 2008]
- viking.rb: Viking#collision_rect is smaller than Viking#paint_rect (it's
  70px wide now)
- game.rb, location.rb: one huge blit operation replaced with clipping;
  unfortunatelly it didn't increase frame rate... :(
- game.rb: Game#paint_loading_screen - progressbar doesn't go behind window 
  frame

[16.November 2008]
- sprinter.rb: fixed a piece of dirt from yesterday
- game.rb: fixed method visibility after yesterday's cleanup
- ladder.rb + testing level + graphic: beginning of a new game object 
  (currently doesn't do anything, just shows)
- monster.rb: documentation modified
- freevikings.rb, fvdef.rb, initfv.rb, game.rb: Loading progressbar made 
  optional (switching with both option and menu)
- game.rb, gamestate.rb: Only keyboard events are given to GameState,
  other events are state independent and as such are served directly
  in Game#every_frame

[15.November 2008]
- gfx/brick_destroyed.tga: destroyed brick is now invisible
- vikingstate.rb, horizontalstate.rb, verticalstate.rb: RD -> RDoc
- game.rb: methods divided into categories m
- gfx/vikings/erik/erik_bullhead_*.tga: awful scratches of erik using his
  "D ability" - "Bullhead"

[12.November 2008]
- game.rb: possibility to cancel loading of a level (press Escape)
- bomb.rb: Flame is animated; destruction is done by Flame, not by
  BombSprite