@@ -6,6 +6,9 @@
 
 ======== Graphics ======================================================
 
+(-) Remake test tiles to some less confusing and awful;
+    remove special testing skin of Switch
+
 (-) Full spritesheets for all three vikings according to the developers'
     manual
 
