@@ -1,3 +1,9 @@
+[25.November 2008]
+- shielder.rb: doesn't add Shield to NullLocation
+- gamestate.rb, game.rb: Screenshot taking (I had to implement this to be able
+  to take screenshots of bomb explosion because I wasn't able to catch it
+  with ImageMagick's 'import')
+
 [24.November 2008]
 - sophisticatedspritestate.rb: RD->RDoc
 - location.rb: Location#find_surface
